unpackaged/main/default/objects/Shipping_and_Asset_Tracking__c/Shipping_and_Asset_Tracking__c.object-meta.xml
<CustomObject>
    <label>Shipping and Asset Tracking</label>
    <nameField>
        <displayFormat>SAT-{000000}</displayFormat>
        <label>Shipping and Asset Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping and Asset Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>