unpackaged/main/default/objects/Shipping_and_Asset_Tracking__c/fields/Account_Payable_Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Account_Payable_Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Payable Invoice Line Item</label>
    <referenceTo>varcpq__Account_Payable_Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Shipping and Asset Tracking</relationshipLabel>
    <relationshipName>Shipping_and_Asset_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>