unpackaged/main/default/objects/Shipping_and_Asset_Tracking__c/fields/Accounts_Payable_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounts Payable Invoice</label>
    <referenceTo>varcpq__Accounts_Payable_Invoice__c</referenceTo>
    <relationshipLabel>Shipping and Asset Tracking</relationshipLabel>
    <relationshipName>Shipping_and_Asset_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>