unpackaged/main/default/objects/Shipping_and_Asset_Tracking__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <label>Tracking Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>